--- a/style.css
+++ b/style.css
@@ -14,23 +14,25 @@
     width: 10%; */
     width: auto;
     height: 48px;
-    margin: 40px;    
+    margin: 40px 40px 0px 40px;    
 }
 main{
     display: flex;
     margin-bottom: 50px;
     margin-left: 160px;
-    padding: 80px;
+    padding: 0px 80px 80px 80px;
 }
 .principal{
     width: 680px;
 }
 .campo-texto{
-    margin-top: 168px;
+    margin-top: 128px;
     width: 616px;
-    height: 288px;
+    height: 48px;
     border-radius: 32px;
     padding: 32px;
+    font-size:32px;
+    line-height: 50%;
 }
 .text-area {
     /*border: none;
@@ -49,14 +51,18 @@ main{
     outline:none;
 }
 .secundaria{
+    height: 944px;
     margin: 32px;
-    background: white ;
+    background: white;
     border-radius: 32px;
 }
 .mensaje{
     background: white;
     background-image: url("/imagenes/Colibri.jpg");
     background-repeat: no-repeat;
+    text-align: left;
+    font-size: 22px;
+    letter-spacing: 150%;
     /**border: none;
     border-radius: 24px;+*/
     color:darkblue;
@@ -66,10 +72,9 @@ main{
     border-radius: 32px;
     position: fixed;**/
     width: 336px;
-    height: 944px;
-    top: 40px;
+    height: 304px;
     border-radius: 32px;
-    margin-left: 10px;
+    margin: 300px 0px 0px 10px;
     padding: 32px;
     border: none;
 
@@ -123,6 +128,15 @@ main{
     line-height: 18px;
     letter-spacing: 0em;
     text-align: left;
+    margin-top: 600px;
+}
+.mensajeInicio h3 {
+    font-size: 24px;
+    text-align: center;
+}
+.mensajeInicio h6 {
+    font-size: 16px;
+    text-align: center;
 }
 .copiar{
     width: 100%;
@@ -134,6 +148,8 @@ main{
     border: 1px solid #0A3871;
     gap: 8px;
     color: #0A3871;
+    margin-top: 200 px;
+    display: none;
 
 }
 
@@ -150,6 +166,7 @@ main{
         padding: 0px;
         width: 100%;
         height: 100%;
+       
     }
     .principal {
         width: 90%; /* Ajustar el ancho para tablet */
@@ -166,6 +183,7 @@ main{
     .btn {
         width: 100%; /* Ajustar el ancho para tablet */
         margin: 0px; /* Ajustar el margen izquierdo para tablet */
+        order: 1;
     }
     .btnEncriptar{
         width: 53%;  
@@ -175,14 +193,19 @@ main{
     }
     .informacion-caja{
         width: auto;
+        margin-top: 0px;
+    }
+    .informacion{
+        margin-top: 200px;
     }
     .secundaria{
         width: 100%;
         height: 133px;
         margin: 0px;
         padding: 0px;
-        background: blue;
         border:0px;
+        order:2;
+        background: none;
     }
     
     .mensaje{
@@ -191,8 +214,10 @@ main{
         width: 94%; /* Ajustar el ancho al 100% */
         height: 133px;
         margin: 0px; /* Ajustar el margen a cero */
+        margin-left: 20px;
         padding: 3%; /* Ajustar el padding a cero */
         border:0px;
+        background: none;
     }
     .copiar {
         display: none; /* Ocultar el botón de copiar */
@@ -211,17 +236,16 @@ main{
         padding: 0px;
         width: 100%;
         height: 100%;
-        background: red;
     }
     .principal {
-        width: 90%; /* Ajustar el ancho para tablet */
-        height: 750px;
+        width: 100%; /* Ajustar el ancho para tablet */
+        height: 700px;
         margin: 0px; /* Ajustar el margen izquierdo para tablet */
         padding: 40px;
     }
     .campo-texto {
-        width: 90%; /* Ajustar el ancho para tablet */
-        height: 450px;
+        width: 100%; /* Ajustar el ancho para tablet */
+        height: 288px;
         padding: 40px; /* Ajustar el margen superior para tablet */  
         margin: auto;
     }
@@ -237,6 +261,10 @@ main{
     }
     .informacion-caja{
         width: auto;
+        
+    }
+    .informacion{
+        margin-top: 80px;
     }
     .secundaria{
         width: 688px;
@@ -245,6 +273,7 @@ main{
         padding: 0px;
         background: white;
         border:0px;
+        box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.5); /* Agregar sombra */
     }
     .mensaje{
         background-image: url("/imagenes/Colibri.jpg");
@@ -259,6 +288,9 @@ main{
     .copiar {
         width: 624px;
         margin-left: 32px;
+    }
+    .mensajeInicio{
+        display: none;
     }
 }
 @media (min-width: 370px) and (max-width: 377px) and (min-height:930px) and (max-height: 934px) {
@@ -281,14 +313,17 @@ main{
     }
     .principal {
         width: 100%; /* Ajustar el ancho para tablet */
-        height: 467px;
+        height: 448px;
         margin: 56px 0px 0px 0px; /* Ajustar el margen izquierdo para tablet */
         padding: 0px;
     }
     .campo-texto {
+        font-size: 32px;
+        text-align: center;
         width: 343px; /* Ajustar el ancho para tablet */
         height: 48px;
-        padding: 0px; /* Ajustar el margen superior para tablet */  
+        padding: 0px; /* Ajustar el margen superior para tablet */
+        padding-top: 12px;  
         margin: 0px 0px 0px 16px;
     }
     .btn {
@@ -315,33 +350,53 @@ main{
     .informacion-caja{
         
         width: auto;
-        margin: 200 px 0px 0px 0px;
+        margin:  0px 0px 0px 0px;
+    }
+    .informacion{
+        
+        padding: 32px;
+        margin:0px;
+        margin-top: 112px;
     }
     .secundaria{
         width: 350px;
-        height: 186px;
-        margin-left: 0px;
-        margin-top: 48px;
-        padding: 12px;
-        background: none;
+        height: 343px;
+        margin-left: 12px;
+        margin-top: 0px;
+        padding: 24px;
+        background: white;
         border:0px;
+        border: 0px 0px 0px 0px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
         
     }
     .mensaje{
         background-image: url("/imagenes/Colibri.jpg");
-        background: white;
+        background: none;
         background-size: cover;
-        width: 263px; /* Ajustar el ancho al 100% */
+        width: 100%; /* Ajustar el ancho al 100% */
         height: 122px;
-        margin: 0px 0px 0px 10px; /* Ajustar el margen a cero */
-        padding: 32px; /* Ajustar el padding a cero */
-        border: 0px 0px 0px 0px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        margin: 0px 0px 0px 0px; /* Ajustar el margen a cero */
+        padding: 0pxpx; /* Ajustar el padding a cero */
+       
+    }
+    .mensajeInicio{
+        font-size: 24px;
+        background: none;
     }
     .copiar {
-        width: 624px;
-        margin-left: 32px;
+        font-size:18px;
+        width: 100%;
+        height: 67px;
+        margin-left: 0px;
+        text-align: center;
+        text-justify: auto;
+        display: none;
+        padding: 0px;
     }
+    /*.mensajeInicio{
+        display: none;
+    }*/
 }
 @media  (max-height: 1755px) and (min-height:1700px) {
     body{
@@ -362,7 +417,7 @@ main{
         padding: 0px;
         width: 375px;
         height: 1750px;
-        background: green;
+       
     }
     .principal {
         width: 100%; /* Ajustar el ancho para tablet */
@@ -372,13 +427,14 @@ main{
     }
     .campo-texto {
         width: 343px; /* Ajustar el ancho para tablet */
-        height: 48px;
+        height: 624px;
         padding: 0px; /* Ajustar el margen superior para tablet */  
         margin: 0px 0px 0px 16px;
+        background: none;
     }
     .btn {
         display: block;
-        width: 343px; /* Ajustar el ancho para tablet */
+        width: 100%; /* Ajustar el ancho para tablet */
         height: 168px;
         margin: 0px; /* Ajustar el margen izquierdo para tablet */
         padding: 12px;
@@ -402,11 +458,15 @@ main{
         width: auto;
         margin: 200 px 0px 0px 0px;
     }
-    .secundaria{
-        width: 350px;
-        height: 186px;
-        margin-left: 0px;
+    .informacion{
         margin-top: 48px;
+        padding: 0px;
+    }
+    .secundaria{
+        width: 343px;
+        height: 595px;
+        margin-left: 0px;
+        margin-top: 498px;
         padding: 12px;
         background: none;
         border:0px;
@@ -416,15 +476,19 @@ main{
         background-image: url("/imagenes/Colibri.jpg");
         background: white;
         background-size: cover;
-        width: 263px; /* Ajustar el ancho al 100% */
-        height: 122px;
-        margin: 0px 0px 0px 10px; /* Ajustar el margen a cero */
+        width: 279px; /* Ajustar el ancho al 100% */
+        height: 432px;
+        margin: 0px 0px 0px 32px; /* Ajustar el margen a cero */
         padding: 32px; /* Ajustar el padding a cero */
         border: 0px 0px 0px 0px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     }
     .copiar {
-        width: 624px;
+        width: 279px;
         margin-left: 32px;
+        border-radius: 24px;
+    }
+    .mensajeInicio{
+        display: none;
     }
 }
