--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ main{
 }
 .mensaje{
     background: white;
-    background-image: url("/imagenes/Colibri.jpg");
+    background-image: url("imagenes/Colibri.jpg");
     background-repeat: no-repeat;
     text-align: left;
     font-size: 22px;
@@ -209,7 +209,7 @@ main{
     }
     
     .mensaje{
-        background-image: url("/imagenes/Muñeco.png");
+        background-image: url("imagenes/Muñeco.png");
         background-size: cover;
         width: 94%; /* Ajustar el ancho al 100% */
         height: 133px;
@@ -276,7 +276,7 @@ main{
         box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.5); /* Agregar sombra */
     }
     .mensaje{
-        background-image: url("/imagenes/Colibri.jpg");
+        background-image: url("imagenes/Colibri.jpg");
         background: none;
         background-size: cover;
         width: 624px; /* Ajustar el ancho al 100% */
@@ -371,7 +371,7 @@ main{
         
     }
     .mensaje{
-        background-image: url("/imagenes/Colibri.jpg");
+        background-image: url("imagenes/Colibri.jpg");
         background: none;
         background-size: cover;
         width: 100%; /* Ajustar el ancho al 100% */
@@ -473,7 +473,7 @@ main{
         
     }
     .mensaje{
-        background-image: url("/imagenes/Colibri.jpg");
+        background-image: url("imagenes/Colibri.jpg");
         background: white;
         background-size: cover;
         width: 279px; /* Ajustar el ancho al 100% */
