--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ main{
 }
 .mensaje{
     background: white;
-    background-image: url("/imagenes/Colibri.jpg");
+    background-image: url("imagenes/Colibri.jpg");
     background-repeat: no-repeat;
     text-align: left;
     font-size: 22px;
@@ -241,7 +241,7 @@ main{
     }
     
     .mensaje{
-        background-image: url("/imagenes/Muñeco.png");
+        background-image: url("imagenes/Colibri.jpg");
         background-size: cover;
         width: 94%; /* Ajustar el ancho al 100% */
         height: 133px;
@@ -308,7 +308,7 @@ main{
         box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.5); /* Agregar sombra */
     }
     .mensaje{
-        background-image: url("/imagenes/Colibri.jpg");
+        background-image: url("imagenes/Colibri.jpg");
         background: none;
         background-size: cover;
         width: 624px; /* Ajustar el ancho al 100% */
@@ -404,7 +404,7 @@ main{
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     }
     .mensaje{
-        background-image: url("/imagenes/Colibri.jpg");
+        background-image: url("imagenes/Colibri.jpg");
         background: none;
         background-size: cover;
         width: 100%; /* Ajustar el ancho al 100% */
@@ -520,7 +520,7 @@ body{
         
     }
     .mensaje{
-        background-image: url("/imagenes/Colibri.jpg");
+        background-image: url("imagenes/Colibri.jpg");
         background: white;
         background-size: cover;
         width: 279px; /* z el ancho al 100% */
