--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ main{
 }
 .mensaje{
     background: white;
-    background-image: url("imagenes/Colibri.jpg");
+    background-image: url("/imagenes/Colibri.jpg");
     background-repeat: no-repeat;
     text-align: left;
     font-size: 22px;
@@ -195,12 +195,13 @@ main{
 
 
 /*estilo  especifico para el celular 2 de Alura*/
-@media  (min-height: 370px) and (max-height: 380px) and (min-height:1710px) and (max-height:1720px){
+@media  (min-width: 370px) and (max-width: 380px) and (min-height:1710px) and (max-height:1720px){
     body{
             margin: 0px;
             padding: 0px;
             width: 375px;
-            height: 1644px;
+            height: 1715px;
+            display:block;
         }
         .logo {
             height: 48px;
@@ -213,12 +214,12 @@ main{
             margin: 0px; /* Ajustar el margen izquierdo para tablet */
             padding: 0px;
             width: 375px;
-            height: 1750px;
+            height: 1715px;
            
         }
         .principal {
             width: 100%; /* Ajustar el ancho para tablet */
-            height: 467px;
+            height: 959px;
             margin: 56px 0px 0px 0px; /* Ajustar el margen izquierdo para tablet */
             padding: 0px;
         }
@@ -239,16 +240,17 @@ main{
         .btnEncriptar{
             width: 343px;
             height: 67px;
-            margin-bottom: 24px;  
             text-align: center;
             font-size: 18px;
+            margin: 0px 16px 24px 0px;
         }
         .btnDesencriptar{
           width: 343px;
-          height: 67px; 
+          height: 67px;
+          margin: 0px 16px 24px 0px;
           text-align: center;
           font-size: 18px;
-          margin-bottom: 24px;  
+           
         }
         .btnEncriptar:hover{
             background-color:#607a99;
@@ -268,28 +270,31 @@ main{
         .secundaria{
             width: 343px;
             height: 595px;
-            margin-left: 0px;
-            margin-top: 498px;
-            padding: 12px;
-            background: none;
+            margin-left: 16px;
+            margin-top: 0px;
+            padding: 32px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+            background: white;
             border:0px;
             
         }
         .mensaje{
-            background-image: url("imagenes/Colibri.jpg");
-            background: white;
+            background-image: url("/imagenes/Colibri.jpg");
             background-size: cover;
             width: 279px; /* z el ancho al 100% */
             height: 432px;
-            margin: 0px 0px 0px 32px; /* Ajustar el margen a cero */
-            padding: 32px; /* Ajustar el padding a cero */
+            margin: 0px 0px 0px 0px; /* Ajustar el margen a cero */
+            padding: 8px; /* Ajustar el padding a cero */
             border: 0px 0px 0px 0px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+            
         }
         .copiar {
             width: 279px;
-            margin-left: 32px;
+            margin:0px;
+            padding: 0px;
+            margin-left: 12px;
             border-radius: 24px;
+            display: block;
         }
         .mensajeInicio{
             display: none;
@@ -362,7 +367,7 @@ main{
     }
     
     .mensaje{
-        background-image: url("imagenes/Colibri.jpg");
+        background-image: url("/imagenes/Colibri.jpg");
         background-size: cover;
         width: 624px; 
         height: 69px;
@@ -457,7 +462,7 @@ main{
         box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.5); /* Agregar sombra */
     }
     .mensaje{
-        background-image: url("imagenes/Colibri.jpg");
+        background-image: url("/imagenes/Colibri.jpg");
         background: none;
         background-size: cover;
         width: 624px; /* Ajustar el ancho al 100% */
@@ -566,7 +571,7 @@ main{
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     }
     .mensaje{
-        background-image: url("imagenes/Colibri.jpg");
+        background-image: url("/imagenes/Colibri.jpg");
         background-image: opacity(0.1);
         background: none;
         background-repeat: repeat;
